chore: regenerate api models from spec 613c8993c761a9e1148d10952ae42068b6182dd5
