# core/api/src/commonMain/kotlin/com/ivangarzab/kluvs/api/models/ClubMemberDto.kt
@@ -1,0 +1,72 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.ivangarzab.kluvs.api.models
+
+
+import kotlinx.serialization.*
+import kotlinx.serialization.descriptors.*
+import kotlinx.serialization.encoding.*
+
+/**
+ * A member as embedded within a club response, including their per-club role.
+ *
+ * @param id 
+ * @param name 
+ * @param role Member's role in this club
+ * @param booksRead 
+ * @param handle 
+ * @param avatarPath 
+ * @param createdAt 
+ * @param clubs IDs of all clubs this member belongs to
+ */
+@Serializable@Serializable
+
+data class ClubMemberDto (
+
+    @SerialName(value = "id") val id: kotlin.Int? = null,
+
+    @SerialName(value = "name") val name: kotlin.String? = null,
+
+    /* Member's role in this club */
+    @SerialName(value = "role") val role: ClubMemberDto.Role? = null,
+
+    @SerialName(value = "books_read") val booksRead: kotlin.Int? = 0,
+
+    @SerialName(value = "handle") val handle: kotlin.String? = null,
+
+    @SerialName(value = "avatar_path") val avatarPath: kotlin.String? = null,
+
+    @SerialName(value = "created_at") val createdAt: kotlin.String? = null,
+
+    /* IDs of all clubs this member belongs to */
+    @SerialName(value = "clubs") val clubs: kotlin.collections.List<kotlin.String>? = null
+
+) {
+
+    /**
+     * Member's role in this club
+     *
+     * Values: owner,admin,member
+     */
+    @Serializable
+    enum class Role(val value: kotlin.String) {
+        @SerialName(value = "owner") owner("owner"),
+        @SerialName(value = "admin") admin("admin"),
+        @SerialName(value = "member") member("member");
+    }
+
+}
+
