# core/api/src/commonMain/kotlin/com/ivangarzab/kluvs/api/models/ClubSummaryDto.kt
@@ -1,0 +1,62 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.ivangarzab.kluvs.api.models
+
+
+import kotlinx.serialization.*
+import kotlinx.serialization.descriptors.*
+import kotlinx.serialization.encoding.*
+
+/**
+ * A lightweight club reference as embedded within a member response, including the member's role.
+ *
+ * @param id 
+ * @param name 
+ * @param discordChannel 
+ * @param serverId 
+ * @param role Member's role in this club
+ */
+@Serializable@Serializable
+
+data class ClubSummaryDto (
+
+    @SerialName(value = "id") val id: kotlin.String? = null,
+
+    @SerialName(value = "name") val name: kotlin.String? = null,
+
+    @SerialName(value = "discord_channel") val discordChannel: kotlin.String? = null,
+
+    @SerialName(value = "server_id") val serverId: kotlin.String? = null,
+
+    /* Member's role in this club */
+    @SerialName(value = "role") val role: ClubSummaryDto.Role? = null
+
+) {
+
+    /**
+     * Member's role in this club
+     *
+     * Values: owner,admin,member
+     */
+    @Serializable
+    enum class Role(val value: kotlin.String) {
+        @SerialName(value = "owner") owner("owner"),
+        @SerialName(value = "admin") admin("admin"),
+        @SerialName(value = "member") member("member");
+    }
+
+}
+
